--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="app.js"></script>
   </head>
   <body>
-
+  <div id="main-map"></div>
+  <button id="cc">Take me to Codeclan</button>
+  <button id="hc">Take me to Home</button>
+  <button id="gc">Take me to Greece</button>
   </body>
 </html>
